<resources>
    <string name="app_name">SilentGuardApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="microphone_permission_is_required">Microphone permission is required to use the app</string>
    <string name="app_need_mic_permission_for_detect_emergency_event">The app needs microphone access to detect emergency events</string>
    <string name="monitoring_started_successfully">Monitoring was successfully enabled.</string>
    <string name="error_starting_monitoring">Error activating monitoring</string>
    <string name="monitoring_stopped">Monitoring stopped</string>
    <string name="error_in_stopping_monitoring">Error stopping monitoring</string>
    <string name="active">active</string>
    <string name="not_active">inactive</string>
    <string name="silent_guard">Silent Guard</string>
    <string name="monitoring_mode">Monitoring mode</string>
    <string name="enable_monitoring">Enable monitoring</string>
    <string name="stop_monitoring">Stop monitoring</string>
    <string name="home">Home</string>
    <string name="decoder">Decoder</string>
    <string name="settings">Settings</string>
    <string name="decode">Decode</string>
    <string name="paste_encrypted_text_here">Paste encrypted text here</string>
    <string name="encrypted_message">Encrypted Message</string>
    <string name="decrypted_output">Decrypted Output</string>
    <string name="accessibility_service_description">Silent email automation service using Gmail</string>
    <string name="sms_accessibility_service_description">Accessibility service for sending SMS silently</string>
    <string name="send">send</string>
    <string name="navigate_up">Navigate up</string>
    <string name="message_text">Message text</string>
    <string name="covert_message">Covert Message</string>
    <string name="save_settings">Save Settings</string>
    <string name="recording_duration_seconds">Recording Duration (seconds)</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="noise_detection_sensitivity">Noise Detection Sensitivity</string>
    <string name="app_settings">App Settings</string>
    <string name="fast_share">Fast share</string>
    <string name="send_heb">שליחה</string>
    <string name="nav">ניווט</string>
    <string name="up">למעלה</string>
    <string name="smsto">smsto:%1$s</string>

</resources>